Remove sensitive MONGODB_URI from .env file
Clear the MONGODB_URI value for security reasons.

--- a/server/.env
+++ b/server/.env
@@ -6,7 +6,7 @@ ADMIN_EMAIL= "admin@test.com"
 ADMIN_PASSWORD="greatstack"
 
 #mongodb
-MONGODB_URI="mongodb+srv://siddharthatomar777:siddhartha2241@cluster0.ogcdtt6.mongodb.net"
+MONGODB_URI=""
 
 #ImageKit
 IMAGEKIT_PUBLIC_KEY='public_F7QIKHOUHXHufJJskZjZGoLbBig='
